--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://rexey3s.github.io
-title: "<strong>Fighter Dreamer</strong>"
+title: "Fighter Dreamer"
 subtitle: A blogging framework for hackers.
 author: rexey3s
 simple_search: https://www.google.com/search
