--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ disqus_show_comment_count: true
 google_analytics_tracking_id: UA-54832770-1
 
 # Facebook Like
-facebook_like: true
+facebook_like: false
 
 gems: ['jekyll-lunr-js-search']
 lunr_search:
